# Tetray

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: tetray.hpp
src/: CMakeLists.txt  tetray.cpp
